Opened 15 years ago

Closed 15 years ago

#4894 closed bug (fixed)

BTextView caret randomly changes width

Reported by: anevilyak Owned by: zooey
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Sometimes while typing text into BTextControl, the width of the caret changes, i.e. becomes wider by a pixel or two than it should be. Forcing a refresh of the textview by changing workspaces and back makes no difference, though typing/deleting more characters will most likely make it reset to its normal width. This problem does not appear to surface in a regular BTextView, at least I wasn't able to reproduce it in StyledEdit.

Change History (2)

comment:1 by zooey, 15 years ago

Status: newassigned

comment:2 by zooey, 15 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev33877

Note: See TracTickets for help on using tickets.