* the textrect.right should always be rounded up to the next integer -   fixes #4894 * PointAt() now rounds x- and y-positions to the next integer instead of always   rounding them up - this yields improved caret-positions (e.g. before an 'f'   character)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33877 a95241bf-73f2-0310-859d-f6bbb57e9c96